cleanup codebase -- move to separate fns

--- a/mos.yml
+++ b/mos.yml
@@ -15,7 +15,8 @@ includes:
 
 config_schema:
   - [ "cportal", "o", {title: "Captive Portal configurations"}]
-  - [ "cportal.enable", "b", true, {title: "Enable WiFi captive portal on device boot"}]
+  - [ "cportal.any", "b", false, {title: "Return index file for any non-hostname matching requests"}]
+  - [ "cportal.enable", "b", false, {title: "Enable WiFi captive portal on device boot"}]
   - [ "cportal.hostname", "s", "setup.device.local", {title: "Hostname to use for captive portal redirect"}]
   - [ "cportal.index", "s", "index.html", {title: "Filename of HTML file to use when serving the captive portal index file"}]
 
